datasource db {
  provider = "postgres"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id    String @id @default(cuid())
  email String @unique

  emailVerifiedAt        DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  verificationToken  VerificationToken?
  password           Password?
  resetPasswordToken ResetPasswordToken?
  mfaMethods         MfaMethod[]
  mfaTokens          MfaToken[]

  userOrganizations OrganizationUsers[]

  emailSecondary  String?
  firstName       String?
  lastName        String?
  phone           String?

  role          String?
  experienceMin Int?
  experienceMax Int?
  teamSizeMin   Int?
  teamSizeMax   Int?
  companyName   String?
}

model OrganizationUsers {
  id  String  @id @default(cuid())

  subscriptionView   Boolean
  subscriptionEdit   Boolean
  subscriptionCreate Boolean
  orgUsersView       Boolean
  orgUsersEdit       Boolean
  orgUsersCreate     Boolean

  owner              Boolean  @default(true)

  accountStatus      String
  role               String @default("Member")

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId String

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String



  @@index([userId, organizationId])
  @@unique([userId, organizationId])
}

model Organization {
  id               String  @id @default(cuid())
  name             String?
  paymentAccountId String?
  email            String

  organizationUsers   OrganizationUsers[]
  invitationTokens    InvitationToken[]

  subscription Subscription?
  
}

model Subscription {
  id                String  @unique 
  subscriptionLevel String
  activeStatus      String
  activeUntil       Int?
  cancellationDate  Int?

  organization   Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId String       @unique
}

model Password {
  hash String

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String @unique
}

model ResetPasswordToken {
  id String @id @default(cuid())

  token     String
  expiresAt DateTime?

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String @unique
}

model VerificationToken {
  id String @id @default(cuid())

  token       String
  expiresAt   DateTime

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String @unique
}

model MfaMethod {
  id String @id @default(cuid())

  type        String
  active      Boolean
  verifiedAt  DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String

  @@unique([userId, type])
}

model MfaToken {
  id String @id @default(cuid())

  type      String
  token     String
  expiresAt DateTime
  createdAt DateTime  @default(now())

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId String

  @@unique([userId, type])
}

model InvitationToken {
  id              String @id @default(cuid())
  guestEmail      String 


  createdAt       DateTime @default(now())
  expiresAt       DateTime

  organization    Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  organizationId  String 

  @@unique([guestEmail, organizationId])
}

model FakeEmail {
  id      String @id @default(cuid())
  to      String
  from    String
  subject String

  replyTo String?
  text    String?
  html    String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
