//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  emailVerifiedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  verificationToken VerificationToken
  password Password
  resetPasswordToken ResetPasswordToken
  mfaMethods MfaMethod [not null]
  mfaTokens MfaToken [not null]
  userOrganizations OrganizationUsers [not null]
  emailSecondary String
  firstName String
  lastName String
  phone String
  role String
  experienceMin Int
  experienceMax Int
  teamSizeMin Int
  teamSizeMax Int
  companyName String
}

Table OrganizationUsers {
  id String [pk]
  subscriptionView Boolean [not null]
  subscriptionEdit Boolean [not null]
  subscriptionCreate Boolean [not null]
  orgUsersView Boolean [not null]
  orgUsersEdit Boolean [not null]
  orgUsersCreate Boolean [not null]
  owner Boolean [not null, default: true]
  accountStatus String [not null]
  role String [not null, default: 'Member']
  organization Organization [not null]
  organizationId String [not null]
  user User [not null]
  userId String [not null]

  indexes {
    (userId, organizationId) [unique]
  }
}

Table Organization {
  id String [pk]
  name String
  paymentAccountId String
  email String [not null]
  organizationUsers OrganizationUsers [not null]
  invitationTokens InvitationToken [not null]
  subscription Subscription
}

Table Subscription {
  id String [unique, not null]
  subscriptionLevel String [not null]
  activeStatus String [not null]
  activeUntil Int
  cancellationDate Int
  organization Organization [not null]
  organizationId String [unique, not null]
}

Table Password {
  hash String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table ResetPasswordToken {
  id String [pk]
  token String [not null]
  expiresAt DateTime
  user User [not null]
  userId String [unique, not null]
}

Table VerificationToken {
  id String [pk]
  token String [not null]
  expiresAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
}

Table MfaMethod {
  id String [pk]
  type String [not null]
  active Boolean [not null]
  verifiedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]

  indexes {
    (userId, type) [unique]
  }
}

Table MfaToken {
  id String [pk]
  type String [not null]
  token String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  userId String [not null]

  indexes {
    (userId, type) [unique]
  }
}

Table InvitationToken {
  id String [pk]
  guestEmail String [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
  organization Organization [not null]
  organizationId String [not null]

  indexes {
    (guestEmail, organizationId) [unique]
  }
}

Table FakeEmail {
  id String [pk]
  to String [not null]
  from String [not null]
  subject String [not null]
  replyTo String
  text String
  html String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: OrganizationUsers.organizationId > Organization.id [delete: Cascade]

Ref: OrganizationUsers.userId > User.id [delete: Cascade]

Ref: Subscription.organizationId - Organization.id [delete: Cascade]

Ref: Password.userId - User.id [delete: Cascade]

Ref: ResetPasswordToken.userId - User.id [delete: Cascade]

Ref: VerificationToken.userId - User.id [delete: Cascade]

Ref: MfaMethod.userId > User.id [delete: Cascade]

Ref: MfaToken.userId > User.id [delete: Cascade]

Ref: InvitationToken.organizationId > Organization.id [delete: Cascade]